Agro-canarydeploy/Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
  namespace: foo
spec:
  selector:
    app: canary-demo
  ports:
  - port: 80
    targetPort: 8080
